--- a/apps/academy/templates/course_rekapitulasi.html
+++ b/apps/academy/templates/course_rekapitulasi.html
@@ -119,7 +119,7 @@
             <th colspan="{{ agendas.count }}" class="bg-label-info text-center">Riwayat Kehadiran</th>
           {% endif %}
 
-          <th rowspan="2" class="bg-label-secondary">Skor Absen</th>
+          <th rowspan="2" class="bg-label-secondary">Skor Kehadiran</th>
 
           {% if assignments %}
             <th colspan="{{ assignments.count }}" class="text-center">Nilai Tugas</th>
