--- a/apps/academy/templates/view_all_academy_course.html
+++ b/apps/academy/templates/view_all_academy_course.html
@@ -134,9 +134,8 @@
           <div class="role-heading">
             <h5 class="mb-1">Tes & Quiz</h5>
             <small class="d-block mb-3">Bank soal, kuis mingguan, dan ujian akhir.</small>
-            <a href="#" class="btn btn-sm btn-label-danger text-nowrap">Create Quiz</a>
+            <a href="{% url 'course-quiz-list' course.uuid %}" class="btn btn-sm btn-label-danger text-nowrap">Manage Quiz</a>
           </div>
-          
         </div>
       </div>
     </div>
