--- a/apps/academy/templates/course_player.html
+++ b/apps/academy/templates/course_player.html
@@ -155,8 +155,8 @@
                             <div class="d-flex justify-content-between align-items-start flex-wrap gap-2">
                                 <div>
                                     <div class="d-flex align-items-center gap-2 mb-2">
-                                        <span class="badge bg-warning rounded-pill p-2">
-                                            <i class="ri-task-line"></i> Tugas
+                                        <span class="badge bg-label-danger rounded-pill">
+                                        Tugas
                                         </span>
                                         <span class="badge bg-label-secondary rounded-pill">Max Score: {{ active_item.max_score }}</span>
                                     </div>
